<?xml version="1.0"?>
<package format="3">
  <name>amr_bt_nodes</name>
  <version>0.1.0</version>
  <description>Custom Behavior Tree Nodes for AMR in Nav2</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="plugin.xml" />
  </export>
</package>

