<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_nav2_plugins</name>
  <version>1.0.0</version>
  <description>A package containing custom Behavior Tree nodes for Nav2.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    
    <nav2_core plugin="${prefix}/bt_plugins.xml" />
  </export>
</package>