<?xml version="1.0"?>
<package format="3">
  <name>path_obstacle_filter</name>
  <version>0.1.0</version>
  <description>Filters obstacles from laser or point cloud data along a planned path.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>