<?xml version="1.0"?>
<package format="3">
  <name>replan_monitor</name>
  <version>0.1.0</version>
  <description>Global path replan monitor based on local costmap analysis</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <pluginlib plugin_manifest="plugin.xml" /> -->
  </export>
</package>

