<?xml version="1.0"?>
<package format="3">
  <name>robot_management</name>
  <version>0.1.0</version>
  <description>AMR navigation parameter adjustment utility and task management</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
