<?xml version="2.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_recovery</name>
  <version>0.0.0</version>
  <description>Smart recovery BT plugin and nodes (planner / MPPI / server)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build-time -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>angles</depend>

  <!-- custom msg/srv/action -->
  <depend>robot_interfaces</depend>

  <!-- eigen (header-only) -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
